[package]
name                           = "pyth-geyser"
version                        = "0.1.0"
edition                        = "2021"

[lib]
crate-type                     = ["cdylib"]

[dependencies]
anyhow                         = { version = "1.0.69" }
bs58                           = { version = "0.4.0" }
lazy_static                    = { version = "1.4.0" }
libc                           = { version = "0.2.140" }
log                            = { version = "0.4.17" }
rand                           = { version = "0.8.5" }
reqwest                        = { version = "0.11.14", features = ["blocking", "json"] }
ring                           = { version = "0.16.20" }
solana-geyser-plugin-interface = { path = "../geyser-plugin-interface" }
solana-sdk                     = { path = "../sdk" }
tokio                          = { version = "1.26.0", features = ["full"] }
