[package]
name                           = "pyth-geyser"
version                        = "0.1.0"
edition                        = "2021"

[lib]
crate-type                     = ["cdylib"]

[dependencies]
anyhow                         = { version = "1.0.69" }
bs58                           = { version = "0.4.0" }
lazy_static                    = { version = "1.4.0" }
libc                           = { version = "0.2.140" }
log                            = { version = "0.4.17" }
env_logger                     = { version = "0.10.0" }
rand                           = { version = "0.8.5" }
reqwest                        = { version = "0.11.14", features = ["blocking", "json"] }
ring                           = { version = "0.16.20" }
solana-geyser-plugin-interface = { version = "=1.13.6" }
solana-sdk                     = { version = "=1.13.6" }
tokio                          = { version = "1.27.0", features = ["full"] }

[patch.crates-io]
serde_wormhole = { git = "https://github.com/wormhole-foundation/wormhole" }
