[package]
name = "solana-pyth"
version = "1.15.0"
description = "Pyth Runtime for Solana"
authors = ["Pyth Data Association"]
repository = "https://github.com/pyth-network/pythnet"
edition = "2021"

[dependencies]
borsh              = "*"
bincode            = "*"
bytemuck           = { version = "*", features = ["derive"] }
fast-math          = "*"
hex                = { version = "*", features = ["serde"] }
serde              = { version = "*", features = ["derive"] }
sha3               = "*"
slow_primes        = "*"

[dev-dependencies]
rand               = "*"

[lib]
crate-type = ["lib"]
name = "solana_pyth"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
rustc_version = "0.4"
